<resources>
    <string name="app_name">Inventory</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_or_register">SIGN IN OR REGISTER</string>
    <string name="forgot_password">forgot password?</string>
    <string name="choose_your_inventory">CHOOSE YOUR INVENTORY</string>
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="event_inventory">Event Inventory</string>
    <string name="checklist">CheckList</string>
    <string name="maintenance_inventory">Maintenance Inventory</string>
    <string name="delete_inventory">Delete Inventory</string>
    <string name="inventory_text_holder">INVENTORY ...</string>
</resources>